2010-02-23  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_tree.rb (TestTree::TestTreeNode#test_level): Added a
	new test method to test the Tree::TreeNode#level method.

	* lib/tree.rb (Tree::TreeNode): Added parenthesis to the methods
	accepting a &block argument (each, preordered_each, each_leaf).

2010-02-21  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_tree.rb (TestTree::TestTreeNode#test_nodeHeight):
	Added a equivalence test for node level and node depth.

2010-02-08  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode#swap_children):
	Simplified the swap using parallel assignment.

	* test/test_tree.rb (TestTree::TestTreeNode): Made equivalent test
	assertion changes to check for ArgumentError.

	* lib/tree.rb (Tree::TreeNode): Changed the exceptions thrown in
	various methods to be an ArgumentError.
	(Tree::TreeNode#nodeDepth): Aliased 'level' to 'nodeDepth' method.

2010-01-30  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_tree.rb (TestTree::TestTreeNode): Renamed the
	`loadChildren' method to be `load_child_nodes'.  Added test cases
	for the degree methods.

	* lib/tree.rb (Tree): Update the example code to use Ruby
	conventions for the variable names.
	(Tree): updated the documentation. Updated the version number in
	readiness for R0.7.0.
	(Tree): Updated the example code to contain comments in the RDoc representation.

	* README: Updated the example to use Ruby conventions for the
	variable names.

2010-01-28  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Minor documentation change.

	* README (DOCUMENTATION): Added comments to the example code.

	* test/test_tree.rb: Documentation clean up.

	* test/test_binarytree.rb: Documentation clean up.

	* lib/tree.rb (Tree): Cleaned up documentation.  Also some minor
	code refactoring done.

	* lib/tree/binarytree.rb (Tree): Cleaned up documentation.  Minor
	readability improvement in the isLeftChild? and isRightChild? methods.
