@@ -3,6 +3,10 @@
 
 * R0.7.0
 *** TODO Start using signed tags from R0.7.0
+*** DONE Fix the edge condition for Tree::TreeNode.isOnlyChild? when the root node is the receiver.
+    CLOSED: [2010-02-23 Tue 22:03]
+    There really is no good default to this situation.  We will return 'true' simply because there is no other sibling
+    to a root.  However, a good case can be made that a root node does not have any parent either.
 *** DONE Add a convenience 'level' method to the TreeNode class (will be an alias to nodeDepth)
     CLOSED: [2010-02-21 Sun 01:02]
 *** DONE Add a API-CHANGES file to document the various API changes made till date
@@ -13,9 +17,11 @@
 * R0.8.0
 *** TODO Convert all method names to the canonical /^[_a-z<>=\[|+-\/\*`]+[_a-z0-9_<>=~@\[\]]*[=!\?]?$/ pattern
     See Roodi report at http://getcaliper.com/caliper/tool?tool=roodi&repo=git://github.com/evolve75/RubyTree.git
-*** TODO Fix the inconsistency of returning root as its first sibling, and returning a
+*** TODO Fix the inconsistency of returning root as its first sibling, and returning a nil instead.  Ditto for last sibling.
+*** TODO fix the inconsistency of returning nil for the root, and an empty array for nodes which have no siblings.
 *** TODO We should perhaps return nil as root's root.
 *** TODO The semantic of length is probably unclear.  Should return the node_depth instead (or remove the method)
+    The current equivalence of length to size should also be removed.
 
 
 * Unplanned / Not assigned to any release
